force-app/main/default/objects/SendGridSetting__c/SendGridSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SendGrid Setting</label>
</CustomObject>