force-app/main/default/objects/SendGridSetting__c/fields/CreditNoteTemplate__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteTemplate__c</fullName>
    <label>Credit Note Template</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>