force-app/main/default/objects/SendGridSetting__c/fields/FromEmail__c.field-meta.xml
<CustomField>
    <fullName>FromEmail__c</fullName>
    <label>From Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>