force-app/main/default/objects/SendGridSetting__c/fields/InvoiceTemplate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplate__c</fullName>
    <label>Invoice Template</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>