force-app/main/default/objects/SendGridSetting__c/fields/IsEmailEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsEmailEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email?</label>
    <type>Checkbox</type>
</CustomField>