force-app/main/default/objects/SendGridSetting__c/fields/IsFlowEmailEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsFlowEmailEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Ensure Scheduled Flows which send emails via SendGrid are disabled.</inlineHelpText>
    <label>Send Email From Flow?</label>
    <type>Checkbox</type>
</CustomField>