force-app/main/default/objects/SendGridSetting__c/fields/IsInvoiceEmailEnabled__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiceEmailEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Invoice Email?</label>
    <type>Checkbox</type>
</CustomField>