force-app/main/default/objects/SendGridSetting__c/fields/MaxInvoiceLinesForPDFGeneration__c.field-meta.xml
<CustomField>
    <fullName>MaxInvoiceLinesForPDFGeneration__c</fullName>
    <label>Maximum Invoice Lines For PDF Generation</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>